java/java-tests/testData/psi/parser-full/declarationParsing/method/Errors0.java
// illegal modifier combinations

abstract public class a {
  public static <error descr="2">protected int f1 = 0; 
}

class ff {
 
}